--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ img {
 i {
   cursor: pointer;
 }
-/* --------------------------------------------------------- */
+/* -------------------------------------------------------- */
 
 .wrapper {
   width: 100%;
@@ -73,12 +73,46 @@ i {
   width: 100%;
   height: 10%;
   background-color: #8EDAFC;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+.notifications i {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  background-color: white;
+  border-radius: 50%;
+  margin-right: 10px;
+  color: #8EDAFC;
+}
+.notifications div a {
+  color: grey;
 }
 
 .search {
   width: 100%;
   height: 10%;
-  background-color: white;
+  background-color: #EAEAEA;
+  display: flex;
+  position: relative;
+}
+.search input {
+  width: 95%;
+  height: 70%;
+  margin: auto;
+  padding-left: 10%;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+}
+.search i {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  transform: translateY(-50%);
+  color: #B1B1B1;
 }
 
 .contacts {
