--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ img {
 i {
   cursor: pointer;
 }
+
+ul {
+  list-style: none;
+}
 /* -------------------------------------------------------- */
 
 .wrapper {
@@ -118,7 +122,7 @@ i {
 .contacts {
   width: 100%;
   height: 70%;
-  background-color: lightgrey;
+  background-color: white;
 }
 
 .current-contact {
@@ -130,11 +134,13 @@ i {
 .messages {
   width: 100%;
   height: 80%;
-  background-color: lightyellow;
+  background-image: url("../img/background.png");
+  background-size: cover;
+  background-position: center;
 }
 
 .write-message {
   width: 100%;
   height: 10%;
-  background-color: white;
+  background-color: #F3EEEA;
 }
