--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,23 @@ ul {
   width: 100%;
   height: 10%;
   background-color: #EAEAEA;
+  padding: 10px;
+  display: flex;
+}
+.current-contact-info {
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+.current-contact-icons {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.current-contact-icons i {
+  margin-left: 10px;
+  color: #B1B1B1;
 }
 
 .messages {
