--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ ul {
 .search {
   width: 100%;
   height: 10%;
-  background-color: #EAEAEA;
+  background-color: #F3EEEA;
   display: flex;
   position: relative;
 }
@@ -131,6 +131,10 @@ ul {
   height: 70px;
   padding: 10px;
   border-bottom: 1px solid lightgrey;
+  cursor: pointer;
+}
+.contacts ul li:hover {
+  background-color: #EAEAEA;
 }
 
 .current-contact {
