--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ li > div > span {
   align-items: center;
 }
 
-/* Message Box */
+/* Messages Box */
 .messages-box {
   width: 100%;
   height: 80%;
